# timetable-to-calendar

./: .gitignore  README.md  pyproject.toml  timetable.ics
example-data/: manual-fix.csv  timetable.docx
tests/test-output/: timetable.ics
timetable_to_calendar/: __main__.py  cell_type_classifier.py  constants.py  doc_to_table.py  event_lint.py  hot_fix.py  i_calendar.py  paths.py  table_to_events.py
